# lunasvg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
include/: lunasvg.h
source/lunasvg/: element.cpp  element.h  filterelement.cpp  filterelement.h  geometryelement.cpp  geometryelement.h  graphics.h  layoutstate.cpp  layoutstate.h  lunasvg.cpp  paintelement.cpp  paintelement.h  parser.cpp  parserutils.h  property.cpp  property.h  renderstate.cpp  renderstate.h  textelement.cpp  textelement.h
source/plutovg/: blend.c  canvas.c  font.c  ft-math.c  ft-math.h  ft-raster.c  ft-raster.h  ft-stroker.c  ft-stroker.h  matrix.c  paint.c  path.c  rasterize.c  surface.c
test/: image_diff.test.ts  svg2png.test.ts
tools/: convert.cpp  convert.ts  convert_wasm.ts  run_convert.ts
